--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
     "@sentry/nextjs": "^8.2.1",
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
     "mini-svg-data-uri": "^1.4.4",
@@ -21,6 +24,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
+    "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.164.1",
